--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   google_fonts: ^2.1.0
   carousel_slider: ^4.0.0-nullsafety.0
   fluttericon: ^2.0.0
+  firebase_auth: ^1.2.0
+  firebase_core: ^1.2.0
+  cloud_firestore: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
