--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cached_network_image: ^3.0.0
   flutter_number_picker: ^1.0.0
   badges: ^2.0.1
+  fluttertoast: ^8.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
