--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   badges: ^2.0.1
   fluttertoast: ^8.0.7
   intl: ^0.17.0
+  image_picker: ^0.8.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
